added fucntionality to add a cat to the db (minus a photo) and implemented recyclerview on main page...still need to add voting system and image functionality

--- a/assig1/app/src/main/res/values/strings.xml
+++ b/assig1/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">PetWars</string>
+    <string name="hint_imageid">Number...</string>
+    <string name="hint_name">Snuffles...</string>
+    <string name="hint_desc">Very cute cat...</string>
+    <string name="button_save">Save</string>
+    <string name="empty_not_saved">Cat not saved because it is empty.</string>
 </resources>
