added functionality to add a photo of cat and view it in the recylclerview

--- a/assig1/app/src/main/res/values/strings.xml
+++ b/assig1/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
     <string name="app_name">PetWars</string>
     <string name="hint_imageid">Number...</string>
-    <string name="hint_name">Snuffles...</string>
-    <string name="hint_desc">Very cute cat...</string>
+    <string name="hint_name">Name of Cat</string>
+    <string name="hint_desc">Description for Cat</string>
     <string name="button_save">Save</string>
     <string name="empty_not_saved">Cat not saved because it is empty.</string>
+    <string name="recycler_view_image_desc">Temp Image of Cat</string>
 </resources>
