added full functionality to add cat, implemeneted cardviews in recyclerview, ordered and labled cats in view by vote count for leaderboard stuff

--- a/assig1/app/src/main/res/values/strings.xml
+++ b/assig1/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">PetWars</string>
-    <string name="hint_imageid">Number...</string>
+    <string name="leader_board">Leader Board</string>
+    <string name="hint_imageid">Number…</string>
     <string name="hint_name">Name of Cat</string>
     <string name="hint_desc">Description for Cat</string>
     <string name="button_save">Save</string>
