--- a/assig1/app/src/main/res/values/strings.xml
+++ b/assig1/app/src/main/res/values/strings.xml
@@ -7,6 +7,6 @@
     <string name="hint_name">Name of Cat</string>
     <string name="hint_desc">Description for Cat</string>
     <string name="button_save">Save</string>
-    <string name="empty_not_saved">Cat not saved because it is empty.</string>
+    <string name="empty_not_saved">Not Saved: A Required Field Was Empty</string>
     <string name="recycler_view_image_desc">Temp Image of Cat</string>
 </resources>
