--- a/assig1/app/src/main/res/values/strings.xml
+++ b/assig1/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="hint_desc">Description for Cat</string>
     <string name="button_save">Save</string>
     <string name="empty_not_saved">Not Saved: A Required Field Was Empty</string>
+    <string name="on_init">First time start: Created two cats</string>
     <string name="recycler_view_image_desc">Temp Image of Cat</string>
 </resources>
