--- a/assig3/app/src/main/res/values/strings.xml
+++ b/assig3/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="action_settings">Settings</string>
+    <string name="action_logout">Log Out</string>
     <string name="section_format">Hello World from section: %1$d</string>
 
     <string name="welcome_msg">Welcome!</string>
