--- a/assig3/app/src/main/res/values/strings.xml
+++ b/assig3/app/src/main/res/values/strings.xml
@@ -44,4 +44,6 @@
     <string name="get_camera_image">Take Picture</string>
     <string name="no_camera_found">Error: No Camera Found</string>
     <string name="vote_image_desc">A user defined image</string>
+    <string name="positive_button">Love It</string>
+    <string name="negative_button">Hate It</string>
 </resources>
