--- a/assig3/app/src/main/res/values/strings.xml
+++ b/assig3/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="invitation_message">Please join me for a friendly chat</string>
     <string name="invitation_cta">Call to action</string>
     <string name="invitation_title">Friendly Chat Invite</string>
-    <string name="sign_in">Sign In</string>
+    <string name="sign_in">Welcome to ImageWars</string>
     <string name="sign_up">Sign Up</string>
     <string name="fresh_config">Fresh Config</string>
     <string name="cause_crash">Cause Crash</string>
@@ -46,4 +46,5 @@
     <string name="vote_image_desc">A user defined image</string>
     <string name="positive_button">Love It</string>
     <string name="negative_button">Hate It</string>
+    <string name="location">Location: </string>
 </resources>
