Pushing new code

--- a/assig3/app/src/main/res/values/strings.xml
+++ b/assig3/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="positive_button">Love It</string>
     <string name="negative_button">Hate It</string>
     <string name="location">Location: </string>
+    <string name="title_activity_card_view">CardViewActivity</string>
 </resources>
